desktop initial version

--- a/code/index.html
+++ b/code/index.html
@@ -4,19 +4,74 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+      </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+    <header class="top-header">
+        <img class="logo-pic" src="./DogMagazine_Logo.png" alt="logo">
+        <h1>THE DOG</h1>
+        <h3>MAGAZINE</h3>
+        <nav class="nav-bar">
+          <a href="#">Start page</a>
+          <a href="#">Big news</a>
+          <a href="#">Small news</a>
+          <a href="#">About us</a>
+        </nav>
     </header>
 
     <section class="big-news">
+        <div class= "imagewrapper">
+            <img class="big-pic" src="./oscar-sutton-yihlaRCCvd4-unsplash.jpg" alt="dog running on the beach">
+        </div>
+        <div class="grid-1">
+            <h2>How much exercise does your dog need daily to be happy?</h2>
+            <p>Hodor, hodor, hodor hodor. Hodor hodor HODOR! Hodor. HODOR? HODOR HODOR! Hodor! Hodor hodor. HODOR hodor, hodor. Hodor, hodor. Hodor. Hodor. Hodor hodor! Hodor? Hodor, hodor. Hodor. Hodor. Hodor hodor.Hodor hodor. Hodor hodor. HODOR hodor, hodor.
+        </p>
+        </div>   
       <!-- The big news content -->
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="small-news">
+        <div class= "grid-2">
+           <img class="small-pic" src="./james-lacy-xe_MtM-ixlw-unsplash.jpg" alt="Dog eating a treat">
+        <div class="medium-news">
+           <h2>Sharing is caring</h2>
+           <h3>15 natural treats recipes for you and your dog!</h3>
+        </div>
+        </div>
+        <div class= "grid-3">
+            <img class="little-pic" src="./laula-co-UXCImW3IVg0-unsplash.jpg" alt="Dog doing agility exercise">
+            <h2>Agility: the new bonding exercise that you need to learn about</h2>
+        </div>
+        <div class= "grid-4">
+            <img class="little-pic" src="./jimmy-conover-ajPr3kQBWFw-unsplash.jpg" alt="Dog traveling in a car">
+            <h2>Dog friendly places to travel with the hole family the next vacation</h2>
+        </div>
+        <div class= "grid-5">
+            <img class="little-pic" src="./jamie-street-uNNCs5kL70Q-unsplash.jpg" alt="Dog caring a branch">
+        </div>
+        <div class= "grid-6">
+            <img class="little-pic" src="./sdf-rahbar-dw7paFI1jnM-unsplash-2.jpg" alt="Dog under blanckets">
+            <h2>Get ready for the winter time! Your fury friend feels cold too</h2>
+        </div>
+        <div class= "grid-7">
+            <img class="small-pic" src="./matt-nelson-aI3EBLvcyu4-unsplash.jpg" alt="Dogs on a walk">
+            <div class="medium-news">
+              <h2>Exercise and socialization?</h2>
+              <h3>Pros and cons of group walking</h3>
+           </div>
+        </div>  
+        <footer class="footer-info"> 
+          <a href="#">Contact us</a>
+          <img class="footer-pic" src="./Social-Icons-01-Free-SVG.png" alt="Social media icons">
+ 
+     </footer>
+
     </section>
+
   </body>
 </html>
