main content layout and hover fixed for mobile view

--- a/code/index.html
+++ b/code/index.html
@@ -27,15 +27,15 @@
   </header>
   <hr class="thick">
   <main>
-    <section class="site-big-news">
+    <section class="site-big-news section-news">
      <!-- big news with hero image -->
-      <div>
+      <div class="section-news-wrap">
         <figure class="site-big-news-figure">
-            <!--border  -->
-          <div class="site-big-news">
+          <div class="site-big-news-image-wrap">
             <img src="https://images.unsplash.com/photo-1578831914933-6339766eb29b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjV8fGZ1bm55JTIwbWVtZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
             alt="man in milk and cereal" 
             class="news-image">
+            <div class="news-image-ovelay"></div>
           </div>
         </figure>
         <div class="site-big-news-body">
@@ -44,7 +44,32 @@
               <a href="https://media3.giphy.com/media/v2uiuJw5vne2Q/200w.webp?cid=ecf05e476rcf0gc0f87nf4w6r6qffsbdumjf623jpmrluqqk&rid=200w.webp&ct=g" 
               class="site-big-news-headline-link">
                 <span class="site-big-news-headline-text">
-                  Cereal bath: Newest spa trend among influencers
+                  Cereal bath: Newest skincare trend among influencers
+                </span>
+              </a>
+            </h3>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
+
+    <section class="site-news section-news">
+      <!-- The other news  -->
+      <div class="section-news-wrap">
+        <figure class="site-news-figure">
+          <div class="site-news-image-wrap">
+            <img src="https://images.unsplash.com/photo-1607798421660-7d2c0bcff934?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzl8fGZ1bm55JTIwbWVtZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
+            alt="trump pinata" 
+            class="news-image">
+          </div>
+        </figure>
+        <div class="site-news-body">
+          <div class="site-news-body-main">
+            <h3 class="site-news-headline">
+              <a href="" class="site-news-headline-link">
+                <span class="site-news-headline-text">
+                  What's a party without this Trump pinata?
                 </span>
               </a>
             </h3>
@@ -53,205 +78,181 @@
       </div>
     </section>
 
-    <section class="site-news">
-      <!-- The other news  -->
-      <figure class="site-news-figure">
-         <!--border  -->
-        <div class="site-news-image-wrap">
-          <img src="https://images.unsplash.com/photo-1607798421660-7d2c0bcff934?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzl8fGZ1bm55JTIwbWVtZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
-          alt="trump pinata" 
-          class="news-image">
-        </div>
-      </figure>
-      <div class="site-news-body">
-        <div class="site-news-body-main">
-          <h3 class="site-news-headline">
-            <a href="" class="site-news-headline-link">
-              <span class="site-news-headline-text">
-                What's a party without this Trump pinata?
-              </span>
-            </a>
-          </h3>
-        </div>
-      </div>
-    </section>
-
-    <section class="site-news">
-      <!-- The other news  -->
-      <figure class="site-news-figure">
-         <!--border  -->
-        <div class="site-news-image-wrap">
-          <img src="https://images.unsplash.com/photo-1532054241088-402b4150db33?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fGZ1bm55JTIwbWVtZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
-          alt="Diet sign" 
-          class="news-image">
-        </div>
-      </figure>
-      <div class="site-news-body">
-        <div class="site-news-body-main">
-          <h3 class="site-news-headline">
-            <a href="" class="site-news-headline-link">
-              <span class="site-news-headline-text">
-                D.I.E.T stands for "Did I Eat That? (Really?)"
-              </span>
-            </a>
-          </h3>
+    <section class="site-news section-news">
+      <div class="section-news-wrap">
+        <figure class="site-news-figure">
+          <div class="site-news-image-wrap">
+            <img src="https://images.unsplash.com/photo-1532054241088-402b4150db33?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fGZ1bm55JTIwbWVtZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
+            alt="Diet sign" 
+            class="news-image">
+          </div>
+        </figure>
+        <div class="site-news-body">
+          <div class="site-news-body-main">
+            <h3 class="site-news-headline">
+              <a href="" class="site-news-headline-link">
+                <span class="site-news-headline-text">
+                  D.I.E.T stands for "Did I Eat That? (Really?)"
+                </span>
+              </a>
+            </h3>
+          </div>
         </div>
       </div>
     </section>
 
-    <!-- other news -->
-    <section class="site-news">
-      <!-- The other news  -->
-      <figure class="site-news-figure">
-         <!--border  -->
-        <div class="site-news-image-wrap">
-          <img src="https://images.unsplash.com/photo-1601902322950-cb5182a20b34?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTk1fHxmdW5ueXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="" class="news-image">
-        </div>
-      </figure>
-      <div class="site-news-body">
-        <div class="site-news-body-main">
-          <h3 class="site-news-headline">
-            <a href="" class="site-news-headline-link">
-              <span class="site-news-headline-text">
-                Speak "CAT" in 24 weeks. Join CATMEOW Bootcamp
-              </span>
-            </a>
-          </h3>
-        </div>
-      </div>
-    </section>
-
-    <section class="site-news">
-      <!-- The other news  -->
-      <figure class="site-news-figure">
-         <!--border  -->
-        <div class="site-news-image-wrap">
-          <img src="https://images.unsplash.com/photo-1570288685280-7802a8f8c4fa?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjN8fGZ1bm55JTIwbWVtZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
-          alt="Monkey with long mustache" 
-          class="news-image">
-        </div>
-      </figure>
-      <div class="site-news-body">
-        <div class="site-news-body-main">
-          <h3 class="site-news-headline">
-            <a href="" class="site-news-headline-link">
-              <span class="site-news-headline-text">
-                Lockdown Diaries: Does this monkey start to look like you? Time for a trim.
-              </span>
-            </a>
-          </h3>
+    <section class="site-news section-news">
+      <div class="section-news-wrap">
+        <figure class="site-news-figure">
+          <div class="site-news-image-wrap">
+            <img src="https://images.unsplash.com/photo-1601902322950-cb5182a20b34?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTk1fHxmdW5ueXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="" class="news-image">
+          </div>
+        </figure>
+        <div class="site-news-body">
+          <div class="site-news-body-main">
+            <h3 class="site-news-headline">
+              <a href="" class="site-news-headline-link">
+                <span class="site-news-headline-text">
+                  Speak "CAT" in 24 weeks. Join CATMEOW Bootcamp
+                </span>
+              </a>
+            </h3>
+          </div>
         </div>
       </div>
     </section>
 
-    <section class="site-news">
-      <!-- The other news  -->
-      <figure class="site-news-figure">
-         <!--border  -->
-        <div class="site-news-image-wrap">
-          <img src="https://images.unsplash.com/photo-1530497610245-94d3c16cda28?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8bWVtZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
-          alt="xray okay" class="news-image">
-        </div>
-      </figure>
-      <div class="site-news-body">
-        <div class="site-news-body-main">
-          <h3 class="site-news-headline">
-            <a href="" class="site-news-headline-link">
-              <span class="site-news-headline-text">
-                This hand signal will cause you broken bones. Here's why
-              </span>
-            </a>
-          </h3>
-        </div>
-      </div>
-    </section>
-
-    <section class="site-news">
-      <!-- The other news  -->
-      <figure class="site-news-figure">
-         <!--border  -->
-        <div class="site-news-image-wrap">
-          <img src="https://images.unsplash.com/photo-1501673618753-48ce9418287b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTIwfHxmdW5ueXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
-          alt="lemur smize" class="news-image">
-        </div>
-      </figure>
-      <div class="site-news-body">
-        <div class="site-news-body-main">
-          <h3 class="site-news-headline">
-            <a href="" class="site-news-headline-link">
-              <span class="site-news-headline-text">
-                Smize Lemur: Vogue's newest top model
-              </span>
-            </a>
-          </h3>
+    <section class="site-news section-news">
+      <div class="section-news-wrap">
+        <figure class="site-news-figure">
+          <div class="site-news-image-wrap">
+            <img src="https://images.unsplash.com/photo-1570288685280-7802a8f8c4fa?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjN8fGZ1bm55JTIwbWVtZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
+            alt="Monkey with long mustache" 
+            class="news-image">
+          </div>
+        </figure>
+        <div class="site-news-body">
+          <div class="site-news-body-main">
+            <h3 class="site-news-headline">
+              <a href="" class="site-news-headline-link">
+                <span class="site-news-headline-text">
+                  Lockdown Diaries: Does this monkey start to look like you? Time for a trim.
+                </span>
+              </a>
+            </h3>
+          </div>
         </div>
       </div>
     </section>
 
-    <section class="site-news">
-      <!-- The other news  -->
-      <figure class="site-news-figure">
-         <!--border  -->
-        <div class="site-news-image-wrap">
-          <img src="https://images.unsplash.com/photo-1618975381091-956145bd42b7?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTg0fHxmdW5ueXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
-          alt="80's photoshoot" class="news-image">
-        </div>
-      </figure>
-      <div class="site-news-body">
-        <div class="site-news-body-main">
-          <h3 class="site-news-headline">
-            <a href="" class="site-news-headline-link">
-              <span class="site-news-headline-text">
-                80's photoshoot style making a comeback
-              </span>
-            </a>
-          </h3>
-        </div>
-      </div>
-    </section>
-
-    <section class="site-news">
-      <!-- The other news  -->
-      <figure class="site-news-figure">
-         <!--border  -->
-        <div class="site-news-image-wrap">
-          <img src="https://images.unsplash.com/photo-1604916851289-390266e08c07?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTM3fHxmdW5ueXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
-          alt="alien and dog" class="news-image">
-        </div>
-      </figure>
-      <div class="site-news-body">
-        <div class="site-news-body-main">
-          <h3 class="site-news-headline">
-            <a href="" class="site-news-headline-link">
-              <span class="site-news-headline-text">
-                Stop aliens from kidnapping your pets! Here's how
-              </span>
-            </a>
-          </h3>
+    <section class="site-news section-news">
+      <div class="section-news-wrap">
+        <figure class="site-news-figure">
+          <div class="site-news-image-wrap">
+            <img src="https://images.unsplash.com/photo-1530497610245-94d3c16cda28?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8bWVtZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
+            alt="xray okay" class="news-image">
+          </div>
+        </figure>
+        <div class="site-news-body">
+          <div class="site-news-body-main">
+            <h3 class="site-news-headline">
+              <a href="" class="site-news-headline-link">
+                <span class="site-news-headline-text">
+                  This hand signal will cause you broken bones. Here's why
+                </span>
+              </a>
+            </h3>
+          </div>
         </div>
       </div>
     </section>
 
-    <section class="site-news">
-      <!-- The other news  -->
-      <figure class="site-news-figure">
-         <!--border  -->
-        <div class="site-news-image-wrap">
-          <img src="https://images.unsplash.com/photo-1589577577513-5ab1cf4cc947?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTU0fHxmdW5ueXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
-          alt="last tissue" class="news-image">
-        </div>
-      </figure>
-      <div class="site-news-body">
-        <div class="site-news-body-main">
-          <h3 class="site-news-headline">
-            <a href="" class="site-news-headline-link">
-              <span class="site-news-headline-text">
-                No tissue paper? No problem!
-              </span>
-            </a>
-          </h3>
+    <section class="site-news section-news">
+      <div class="section-news-wrap">
+        <figure class="site-news-figure">
+          <div class="site-news-image-wrap">
+            <img src="https://images.unsplash.com/photo-1501673618753-48ce9418287b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTIwfHxmdW5ueXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
+            alt="lemur smize" class="news-image">
+          </div>
+        </figure>
+        <div class="site-news-body">
+          <div class="site-news-body-main">
+            <h3 class="site-news-headline">
+              <a href="" class="site-news-headline-link">
+                <span class="site-news-headline-text">
+                  Smize Lemur: Vogue's newest top model
+                </span>
+              </a>
+            </h3>
+          </div>
         </div>
       </div>
+    </section>
+
+    <section class="site-news section-news">
+      <div class="section-news-wrap">
+        <figure class="site-news-figure">
+          <div class="site-news-image-wrap">
+            <img src="https://images.unsplash.com/photo-1618975381091-956145bd42b7?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTg0fHxmdW5ueXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
+            alt="80's photoshoot" class="news-image">
+          </div>
+        </figure>
+        <div class="site-news-body">
+          <div class="site-news-body-main">
+            <h3 class="site-news-headline">
+              <a href="" class="site-news-headline-link">
+                <span class="site-news-headline-text">
+                  80's photoshoot style making a comeback
+                </span>
+              </a>
+            </h3>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="site-news section-news">
+      <div class="section-news-wrap">
+        <figure class="site-news-figure">
+          <div class="site-news-image-wrap">
+            <img src="https://images.unsplash.com/photo-1604916851289-390266e08c07?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTM3fHxmdW5ueXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
+            alt="alien and dog" class="news-image">
+          </div>
+        </figure>
+        <div class="site-news-body">
+          <div class="site-news-body-main">
+            <h3 class="site-news-headline">
+              <a href="" class="site-news-headline-link">
+                <span class="site-news-headline-text">
+                  Stop aliens from kidnapping your pets! Here's how
+                </span>
+              </a>
+            </h3>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="site-news section-news">
+      <div class="section-news-wrap">
+        <figure class="site-news-figure">
+          <div class="site-news-image-wrap">
+            <img src="https://images.unsplash.com/photo-1589577577513-5ab1cf4cc947?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTU0fHxmdW5ueXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
+            alt="last tissue" class="news-image">
+          </div>
+        </figure>
+        <div class="site-news-body">
+          <div class="site-news-body-main">
+            <h3 class="site-news-headline">
+              <a href="" class="site-news-headline-link">
+                <span class="site-news-headline-text">
+                  No tissue paper? No problem!
+                </span>
+              </a>
+            </h3>
+          </div>
+        </div>
+    </div>
     </section>
   </main>
 
