--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Mukta+Vaani:wght@200;300;400;500;600;800&display=swap"
     rel="stylesheet">
-  <title>Document</title>
+  <title>Mercedes F1 Magazine</title>
 </head>
 
 <body class="main-grid">
@@ -38,7 +38,9 @@
       <div class="main-article-ingress">
         <div class="border"></div>
         <div class="border"></div>
-        <h2><span style="color:#FF0000;">New </span>F1 Safety Car heu hej hej</h2>
+        <h2><span style="color:#FF0000;">New </span>F1 Safety Car</h2>
+        <section>
+          <article>
         <p>It’s a familiar sight for fans of the FIA Formula 1 World Championship: when there’s been an accident on
           track or the weather conditions are bad, a Mercedes-AMG safely leads the field of F1 cars around the track.
           It’s been this way for 25 years. And for 20 years, Bernd Mayländer has been at the steering wheel of the
@@ -49,6 +51,8 @@
           July 2nd, 2020. The car will prominently support the Formula 1 campaign “WeRaceAsOne” by featuring its rainbow
           key visual on the flanks and on the bonnet of the car. The eye-catching design symbolizes the sports
           commitment for diversity and inclusion.</p>
+        </article>
+        </section>
       </div>
     </div>
 
