finally my first commit

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,64 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="https://i.ibb.co/ctPyhfL/burger.png">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
+
   <body>
-    <header>
+   <header>
       <!-- Some kind of logo and navbar -->
-    </header>
+    <a href="index.html">
+      <img class="logo" src="./pixelburger.png" alt="burger">
+    </a>
+      <nav class="navigation">
+        <li class="nav-item">
+        <a href="about.html">ABOUT</a>
+      </li>
+      <li class="nav-item">
+        <a href="contact.html">CONTACT</a>
+      </li>
+      </nav>
+  </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+            <!-- The big news content -->
+        <img class="big-image" src="https://cdn.cloudflare.steamstatic.com/steam/apps/1614890/capsule_616x353.jpg?t=1627576274">
+      <div class="big-text">
+        <h3>BALDO</h3>
+        <p>A prophecy came true, the pure child is born. The no-heart creature 
+        sealed in the underworld by the wise owls is about to rise again.
+        Meet many weird and funny characters in the amazing world of Baldo, 
+        an action adventure RPG full of puzzles, intriguing gameplay mechanics
+        and intricate dungeons, spread across an interactive open world.
+        Discover towns, uncover secrets, collect weapons and buy useful 
+        items to help on your journey.
+        </p>
+      </div>
+
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+
+    <section class="small-news">
+      <!-- The other news-->
+      <a class="small-image" href="eastward.html">
+        <img class="small" src="https://assets1.ignimgs.com/2019/08/23/eastward---button-fin-1566519472279.jpg">
+        </a>
+        
+      <a class="small-image" href="nino-kuni.html">
+        <img class="small" src="https://cdns.kinguin.net/media/catalog/category/cache/1/hi_image/9df78eab33525d08d6e5fb8d27136e95/nino8.jpg">
+      </a>
+      <a class="small-image" href="about.html">
+        <img class="small" src="https://sm.ign.com/t/ign_jp/game/e/eastward/eastward_v4bn.128.jpg">
+      </a>
+      <a class="small-image" href="about.html">
+        <img class="small"src="https://sm.ign.com/t/ign_jp/game/e/eastward/eastward_v4bn.128.jpg">
+      </a> 
+
     </section>
+      
   </body>
 </html>
