--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <header>
+    <!-- Some kind of logo and navbar -->
+    <img src="/project-news-site/code/Mz_logo.png">
+  </header>
+
+  <section class="big-news">
+    <!-- The big news content -->
+    <p>paragraph</p>
+  </section>
+
+  <section class="">
+    <!-- The other news  -->
+  </section>
+</body>
+
 </html>
